[gd_scene load_steps=2 format=3 uid="uid://x8ars3vnv124"]

[ext_resource type="Script" path="res://code/menu_code/volume_menu_container.gd" id="1_7wd4v"]

[node name="Volume_MenuController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wd4v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = 1.0
offset_right = 525.0
offset_bottom = 217.0
scale = Vector2(3, 3)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7
alignment = 1

[node name="FXLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Effects Volume"

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/FXLabel"]
show_behind_parent = true
layout_mode = 0
offset_left = -7.0
offset_top = -2.53
offset_right = 184.0
offset_bottom = 27.47

[node name="FXSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -24.0
max_value = 24.0

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MusicLabel"]
show_behind_parent = true
layout_mode = 0
offset_left = -7.0
offset_top = -2.53
offset_right = 184.0
offset_bottom = 27.47

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -24.0
max_value = 24.0

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back
"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/FXSlider" to="." method="_on_fx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_button_up"]
